added update user route
