# src/routes/account-router.js
@@ -1,11 +1,11 @@
 import express from "express";
-import { createUser,logIn } from "../controllers/auth-controller.js";
+import { createUser,logIn,userData,updateUser } from "../controllers/auth-controller.js";
 
 const accountRouter = express.Router(); 
 
 accountRouter.post("/auth/sign-up",createUser);
 accountRouter.post("/auth/sign-in",logIn);
-// accountRouter.get("/Accounts/photo/:userName",usersPhoto);
-
+accountRouter.get("/auth/me",userData);
+accountRouter.put("/users/:userId",updateUser);
 
 export default accountRouter
